Added some basic functionality to the Index.html file.

--- a/es-01/Index.html
+++ b/es-01/Index.html
@@ -1,2 +1,17 @@
-<h1>Greetings!</h1>
-<P>Troiana fabula clara est</P>
+ <html>
+    <head>
+        <title>
+            Head testing
+        </title>
+    </head>
+    <body>
+        <h1>
+            Greetings!
+        </h1>
+        <Span>
+            <P>
+                 Troiana fabula clara est
+            </P><!-- Random comment -->
+        </Span>
+    </body>
+</html>
