Testing some more examples using HTML

--- a/es-01/Index.html
+++ b/es-01/Index.html
@@ -1,17 +1,17 @@
- <html>
+<html>
     <head>
         <title>
-            Head testing
+            Landing Page
         </title>
     </head>
     <body>
-        <h1>
-            Greetings!
-        </h1>
-        <Span>
-            <P>
-                 Troiana fabula clara est
-            </P><!-- Random comment -->
-        </Span>
+        <div class="wrepper">
+              <ul>
+                 <li>EAQ</li>
+                 <li>About</li>
+                 <li>Contact</li>
+                 <li>Help</li>
+            </ul>
+        </div>
     </body>
 </html>
