--- a/es-01/05/Index.html
+++ b/es-01/05/Index.html
@@ -14,6 +14,6 @@
         </h1>
         <p>
         <h2 href="#sezione-2"> Sezione 2</h2></p>
-        <br />Este es el texto de la sección 2.
+        <br />Questo è il testo della sezione 2.
     </body>
 </html> 
