--- a/es-01/06/Index.html
+++ b/es-01/06/Index.html
@@ -5,17 +5,17 @@
         </title>
     </head>
     <body>
-        <h1>Titolo di primo livello</h1>
+        <h1>Titolo di primo livello (Default di HTML)</h1>
         <p> Primo paragrafo lalalalalalalallaalalalalalal. 
             <a href="#top">Vai alla sezione</a> per tornare al titolo di secondo livello.
         </p>
         <img src="immagine.jpg" alt="Descrizione immagine">
         <div>
-        <h2>Titolo di secondo livello 1</h2>
+        <h2>Titolo di secondo livello 1 (Default di HTML)</h2>
          <p> Secondo paragrafo lelelelelelellelelelelelele.  
             <a href="#top">Vai alla sezione</a> per tornare al titolo di secondo livello.
         </p>
-        <h2>Titolo di secondo livello 2</h2>
+        <h2>Titolo di secondo livello 2 (Default di HTML)</h2>
         <p> Secondo paragrafo lelelelelelellelelelelelele.  
             <a href="#top">Vai alla sezione</a> per tornare al titolo di secondo livello.
         </p>   
