--- a/es-01/07/Index7.html
+++ b/es-01/07/Index7.html
@@ -1,9 +1,6 @@
 <html>
     <header>
-        <title>Sample Page </title>
-        <style>
-            .testo-rosso [color: red;]
-        </style>
+        <title>Titolo di prova</title>
     </header>
     <body>
         <header>
@@ -12,17 +9,17 @@
                     <h2>Menu</h2>
                 </nav>
         </header>
-            <h1>Welcome to My Sample Page</h1>
-            <a href="top">Back to Top</a>
+            <h1>Benvenuto al mio sito di prova</h1>
+            <a href="top">Torna indietro</a>
     <arcticle>
-                <h2>Section Title</h2>
+                <h2>Section Questo es un titolo H2 con seccion inclusso</h2>
                 <section>
-                <h3>Subsection Title</h3>
+                <h3>Questo e un titolo H3</h3>
                 </section>
     </article>
    </main>
    <footer>
-        Footer Information
+        Questo e un footer di prova
    </footer>
     </body>
     
