Another index file for basic practicing

--- a/Index.html
+++ b/Index.html
@@ -9,6 +9,11 @@
             Encabezado de la pagina
                 <nav>
                     <h2>Menú principal</h2>
+                    <ul>
+                        <li><a href="#top">Inicio</a></li>
+                        <li><a href="#section1">Sección 1</a></li>
+                        <li><a href="#section2">Sección 2</a></li>
+                    </ul>
                 </nav>
         </header>
             <h1>Bienvenido a mi sitio de prueba</h1>
@@ -17,6 +22,11 @@
                 <h2>Sección Este es un título H2 con sección incluida</h2>
                 <section>
                 <h3>Este es un título H3</h3>
+                <p>Este es un párrafo de ejemplo dentro de la sección.</p>
+                </section>
+                <section>
+                <h3>Este es otro título H3</h3>
+                <p>Este es otro párrafo de ejemplo dentro de la sección.</p>
                 </section>
     </article>
    <footer>
