Added div class header category.

--- a/Page.html
+++ b/Page.html
@@ -6,5 +6,8 @@
         <link rel="stylesheet" href="Style.css">
     </head>
     <body>
+           <div class="header">
+            <h1>Header category</h1>
+        </div>
     </body>
 </html>
