--- a/Page.html
+++ b/Page.html
@@ -9,5 +9,8 @@
            <div class="header">
             <h1>Header category</h1>
         </div>
+        <div class="footer">
+            <h1>Footer category</h1>
+        </div>
     </body>
 </html>
