--- a/Page.html
+++ b/Page.html
@@ -12,5 +12,8 @@
         <div class="footer">
             <h1>Footer category</h1>
         </div>
+        <div class="sidebar">
+            <h1>Sidebar category</h1>
+        </div>
     </body>
 </html>
