Added 10 grid reds to the divs page

--- a/ES/12/divs.html
+++ b/ES/12/divs.html
@@ -5,5 +5,35 @@
         </title>
     </head>
     <body>
+        <div class="grid-red">
+            <h1>grid-red</h1>
+        </div>
+        <div class="grid-red">
+            <h1>grid-red</h1>
+        </div>
+        <div class="grid-red">
+            <h1>grid-red</h1>
+        </div>
+        <div class="grid-red">
+            <h1>grid-red</h1>
+        </div>
+        <div class="grid-red">
+            <h1>grid-red</h1>
+        </div>
+        <div class="grid-red">
+            <h1>grid-red</h1>
+        </div>
+        <div class="grid-red">
+            <h1>grid-red</h1>
+        </div>
+        <div class="grid-red">
+            <h1>grid-red</h1>
+        </div>
+        <div class="grid-red">
+            <h1>grid-red</h1>
+        </div>
+        <div class="grid-red">
+            <h1>grid-red</h1>
+        </div>
     </body>
 </html>
