Added 10 grid blues to the divs.html file

--- a/ES/12/divs.html
+++ b/ES/12/divs.html
@@ -35,5 +35,35 @@
         <div class="grid-red">
             <h1>grid-red</h1>
         </div>
+        <div class="grid-blue">
+            <h1>grid-blue</h1>
+        </div>
+        <div class="grid-blue">
+            <h1>grid-blue</h1>
+        </div>
+        <div class="grid-blue">
+            <h1>grid-blue</h1>
+        </div>
+        <div class="grid-blue">
+            <h1>grid-blue</h1>
+        </div>
+        <div class="grid-blue">
+            <h1>grid-blue</h1>
+        </div>
+        <div class="grid-blue">
+            <h1>grid-blue</h1>
+        </div>
+        <div class="grid-blue">
+            <h1>grid-blue</h1>
+        </div>
+        <div class="grid-blue">
+            <h1>grid-blue</h1>
+        </div>
+        <div class="grid-blue">
+            <h1>grid-blue</h1>
+        </div>
+        <div class="grid-blue">
+            <h1>grid-blue</h1>
+        </div>  
     </body>
 </html>
