Added final link to grids

--- a/ES/12/divs.html
+++ b/ES/12/divs.html
@@ -5,6 +5,7 @@
         </title>
     </head>
     <body>
+        <link rel="stylesheet" href="Divs.css" />
         <div class="grid-red">
             <h1>grid-red</h1>
         </div>
